# hackathon-20250719-ecommerce-with-stripe

./: .gitignore  README.md
app/: jest.config.js  package-lock.json  package.json
app/components/: CartItem.js  CheckoutButton.js  Layout.js  NavBar.js  Product.js  ShoppingCart.js
app/pages/: _app.js  cancel.js  index.js  success.js
app/pages/api/: checkout.js
app/test/api/: checkout.test.js
app/test/components/: CartItem.test.js  CheckoutButton.test.js  NavBar.test.js  Product.test.js  ShoppingCart.test.js
components/: ShoppingCart.js
documents/: COMPREHENSIVE_TEST_STRATEGY.md  QA_PROJECT_ANALYSIS.md  REQUIREMENTS.md  TESTCASES.md
test/: .env.example  .gitignore  Dockerfile  README.md  debug_page_structure.py  playwright.config.py  pyproject.toml  pytest.ini  run_test_suites.sh  run_tests.sh  run_tests_headed.sh
test/models/: basic_page.py
test/pages/: main.py
test/src/template_qa_python/: __init__.py
test/tests/: conftest.py  constants.py
test/tests/ui/: conftest.py  test_cart_functionality.py  test_e2e_journeys.py  test_example.py  test_main_page.py  test_market_functionality.py  test_payment_functionality.py
